--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,66 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&display=swap');
+
+body {
+    background: rgb(13,15,30);
+    background: linear-gradient(94deg, rgba(13,15,30,1) 0%, rgba(30,33,67,1) 10%, rgba(35,39,80,1) 13%, rgba(38,42,86,1) 20%, rgba(38,42,86,1) 80%, rgba(35,39,80,1) 86%, rgba(30,33,67,1) 90%, rgba(13,15,30,1) 100%);
+    font-family: 'Orbitron', sans-serif;
+    height: 100svh;
+    margin: 0;
+}
+
+.menu {
+    display: grid;
+    grid-template-columns: 20% auto 20%;
+}
+
+.header {
+    background: url(https://media.giphy.com/media/jOtazvv6bN4ccCzRKO/giphy.gif);
+    background-size: cover;
+    -moz-background-clip: text;
+    -webkit-background-clip: text;
+
+    display: grid;
+    grid-column: 2 / 3;
+    justify-content: center;
+    font-weight: 900;
+    color: transparent;
+    font-size: 2.5rem;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+}
+
+
 .content {
-    color: red;
+    grid-column: 2 / 3;
+    color: silver;
+    line-height: 1.8;
+    text-align: center;
+}
+
+.description > h2 {
+    color: transparent;
+    animation: shadow 2s;
+    text-shadow: 0 0 0 rgba(255, 255, 255, 1);
+
+}
+
+.next > button {
+    font-family: 'Orbitron', sans-serif;
+    font-size: 1.5rem;
+    background: #37306B;
+    border: none;
+    padding: .5rem 1rem;
+}
+
+.next > button:hover {
+    background: rgb(55, 48, 107, .6);
+    cursor: pointer;
+}
+@keyframes shadow {
+    0% {
+        text-shadow: 0 0 5px rgba(255, 255, 255, .3);
+    }
+    100% {
+        text-shadow: 0 0 1px rgba(255, 255, 255, 1);
+    }
 }
