--- a/src/style.css
+++ b/src/style.css
@@ -41,7 +41,15 @@ body {
     color: transparent;
     animation: shadow 2s;
     text-shadow: 0 0 0 rgba(255, 255, 255, 1);
+}
 
+.second {
+    animation: shadow 2s;
+    text-shadow: 0 0 0 rgba(255, 255, 255, 1);
+}
+
+.third {
+    animation: shadow 2s;
 }
 
 .next > button {
