--- a/src/style.css
+++ b/src/style.css
@@ -37,19 +37,10 @@ body {
     text-align: center;
 }
 
-.description > h2 {
+.animate {
     color: transparent;
     animation: shadow 2s;
     text-shadow: 0 0 0 rgba(255, 255, 255, 1);
-}
-
-.second {
-    animation: shadow 2s;
-    text-shadow: 0 0 0 rgba(255, 255, 255, 1);
-}
-
-.third {
-    animation: shadow 2s;
 }
 
 .next > button {
