--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&display=swap');
 
+:root {
+    --font: 'Orbitron', sans-serif;
+}
+
 body {
     background: rgb(13,15,30);
     background: linear-gradient(94deg, rgba(13,15,30,1) 0%, rgba(30,33,67,1) 10%, rgba(35,39,80,1) 13%, rgba(38,42,86,1) 20%, rgba(38,42,86,1) 80%, rgba(35,39,80,1) 86%, rgba(30,33,67,1) 90%, rgba(13,15,30,1) 100%);
-    font-family: 'Orbitron', sans-serif;
+    font-family: var(--font);
     height: 100svh;
     margin: 0;
 }
@@ -41,19 +45,8 @@ body {
     display: none;
 }
 
-.label {
-    font: 1em sans-serif;;
-}
-
 input {
-    color: #000;
-}
-
-input .animate {
-    color: black;
-    letter-spacing: 2px;
-    animation: shadow 2s;
-    text-shadow: 0 0 0 rgba(0, 0, 0, 1);
+    font: var(--font);
 }
 
 .animate {
@@ -64,7 +57,7 @@ input .animate {
 }
 
 .next > button {
-    font-family: 'Orbitron', sans-serif;
+    font-family: var(--font);
     font-size: 1.5rem;
     background: #37306B;
     color: white;
