--- a/src/style.css
+++ b/src/style.css
@@ -95,7 +95,7 @@ input {
     height: 100svh;
     display: grid;
     grid-template-columns: 10% auto 10%;
-    grid-template-rows: 20% auto;
+    grid-template-rows: 30% auto;
 }
 
 header {
@@ -113,6 +113,7 @@ header {
 
 .grid-container {
     display: grid;
+    grid-template-rows: 5% auto;
     place-items: center;
 }
 
@@ -132,5 +133,10 @@ header {
 
 .column:hover {
     background: lightblue;
+}
+
+.grid-container > h2 {
+    margin: 0;
+    height: min-content;
 }
 
