--- a/src/style.css
+++ b/src/style.css
@@ -124,14 +124,14 @@ header {
     aspect-ratio: 1 / 1;
 }
 
-.item{
+.column > div{
     border: 1px solid black;
     width: 2rem;
     height: 2rem;
 
 }
 
-.item:hover {
+.column > div:hover {
     background: lightblue;
 }
 
