--- a/src/style.css
+++ b/src/style.css
@@ -197,3 +197,25 @@ button:hover {
     box-sizing: content-box;
 }
 
+.message {
+    display: grid;
+    place-items: center start;
+}
+
+.textboard-border {
+    width: calc(85%);
+    height: calc(70%);
+    display: grid;
+    place-items: center;
+    background: rgb(58,59,62);
+    background: linear-gradient(180deg, rgba(58,59,62,1) 0%, rgba(129,133,137,1) 31%);
+    border-radius: 1rem;
+}
+
+.textboard {
+    background: rgb(40,40,43);
+    background: radial-gradient(circle, rgba(40,40,43,1) 57%, rgba(25,25,27,1) 92%, rgba(0,0,0,1) 100%);
+    width: calc(100% - 2rem);
+    height: calc(100% - 2rem);
+    border-radius: 1rem;
+}
