Edit cells style

--- a/src/style.css
+++ b/src/style.css
@@ -139,7 +139,11 @@ button:hover {
     background-color: white;
 }
 
-.player > div:hover , .machine > div:hover{
+.machine > div {
+    cursor: pointer;
+}
+
+.machine > div:hover{
     background: lightblue;
 }
 
