Add grit display of hit/miss

--- a/src/style.css
+++ b/src/style.css
@@ -139,6 +139,12 @@ button:hover {
     background-color: white;
 }
 
+.player > div {
+    display: grid;
+    place-content: center;
+    font-size: 2rem;
+}
+
 .machine > div {
     cursor: pointer;
 }
